BM-19544 Fix: allow UID usage, add options for all domains - keep 'all' compat